[tool.poetry]
name = "OctoPrint-Docs"
version = "0.1.0"
description = ""
authors = ["Gina Häußge <gina@octoprint.org>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.3.0"
mkdocs-awesome-pages-plugin = "^2.7.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.0.1"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.1.18"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-section-index = "^0.3.4"
mkdocstrings-python = "^1.1.2"
pydantic = "^1.10"
"ruamel.yaml" = "^0.17.21"
markdown-grid-tables = "^0.3.1"
class-doc = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
