[tool.poetry]
name = "OctoPrint-Docs"
version = "0.1.0"
description = ""
authors = ["Gina Häußge <gina@octoprint.org>"]
packages = [ { include = "extensions", from = "."  }]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.0"
mkdocs-awesome-pages-plugin = "^2.9.1"
mkdocs-gen-files = "^0.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-material = "^9.1.18"
mkdocs-macros-plugin = "^1.0.1"
mkdocs-section-index = "^0.3.5"
mkdocstrings-python = "^1.1.2"
pydantic = "^1.10"
"ruamel.yaml" = "^0.17.21"
markdown-grid-tables = "^0.3.1"
class-doc = "^0.2.6"
mergedeep = "^1.3.4"
mike = "^1.1.2"
mkdocs-glightbox = "^0.3.4"
mkdocs-site-urls = "^0.2.0"
pymdown-extensions = "^10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
